package org.main_java.sistema_monitoreo_jurassic.domain.dinosaurios;

public abstract class Dinosaurio {
}
