package org.main_java.sistema_monitoreo_jurassic.domain.dinosaurios.carnivoro;

import org.main_java.sistema_monitoreo_jurassic.domain.dinosaurios.Dinosaurio;

public abstract class Carnivoro extends Dinosaurio {
}
