package org.main_java.sistema_monitoreo_jurassic.domain.dinosaurios.carnivoro;

public class CarnivoroTerrestre extends Carnivoro {
}
