package org.main_java.sistema_monitoreo_jurassic.domain.dinosaurios.herbivoro;

import org.main_java.sistema_monitoreo_jurassic.domain.dinosaurios.Dinosaurio;

public abstract class Herbivoro extends Dinosaurio {
}
