package org.main_java.sistema_monitoreo_jurassic.domain.dinosaurios.herbivoro;

public class HerbivoroVolador extends Herbivoro {
}
