package org.main_java.sistema_monitoreo_jurassic.domain.dinosaurios.omnivoro;

public class OmnivoroAcuatico extends Omnivoro {
}
