package org.main_java.sistema_monitoreo_jurassic.domain.sensores;

public class SensorFrecuenciaCardiaca extends Sensor {
}
